Fixed user dashboard wrapper styles  on mobile

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -313,6 +313,15 @@ Mobile Styles
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 ———————————————————————————————————————*/
 
+
+@media only screen and (max-width: 991px) {
+  .g__dashboard-wrapper {
+    padding: 30px 0;
+  }
+  
+}
+
+
 @media only screen and (max-width: 575px) {
   .g__form-container {
     padding: 50px 30px;
